# abstractatlas

./: .env.sample  .gitignore  404.html  AGENTS.md  CLAUDE.md  CNAME  CONSTITUTION.md  README.md  index.html  pyproject.toml
.specify/: feature.json
_app/: version.json
about/: index.html
data/: title_modifications.json
docs/: README.md  abstracts-book-plan.md  cllm-claims-plan.md  clustering-analysis-plan.md  ohbm26-plan.md  per-stage-pattern.md  poster-layout-optimizer-plan.md  poster-sequencing-benchmark-plan.md  repo-review-2026-03-28.md  reproducibility-vision.md  search-unification-plan.md  static-ui-plan.md  title-reference-cleanup-plan.md  topic-clustering-landscape-2026-03-30.md
experiments/: README.md
memory/: summary.md
neuroscape/: 404.html  index.html
ohbm2026/: 404.html  index.html
pr-11/: 404.html  index.html
pr-12/: 404.html  index.html
pr-15/: 404.html  index.html
pr-16/: 404.html  index.html
pr-17/: 404.html  index.html
pr-18/: 404.html  index.html
pr-37/: 404.html  index.html
pr-38/: index.html
pr-39/: index.html
pr-40/: index.html
pr-41/: index.html
pr-42/: index.html
pr-43/: index.html
pr-44/: index.html
pr-45/: index.html
pr-46/: index.html
pr-47/: index.html
pr-48/: index.html
pr-49/: index.html
pr-51/: index.html
pr-53/: index.html
pr-55/: index.html
pr-57/: index.html
pr-58/: index.html
pr-61/: index.html
pr-63/: index.html
pr-64/: index.html
pr-65/: index.html
pr-67/: index.html
pr-69/: index.html
pr-70/: index.html
pr-71/: index.html
pr-72/: index.html
pr-9/: 404.html  index.html
sandbox/: 404.html  index.html
scripts/: analyze_poster_layout.py  build_category_evaluation_rollup.py  build_layout_review_hub.py  build_ui_data.py  cluster_projection_silhouette.py  compare_poster_layout_proposals.py  derive_neuroscape_centroids.py  distill_dimensions.py  eval_typo_recall.py  evaluate_label_systems.py  extract_layout_geometry.py  fetch_ui_inputs.sh  generate_semantic_layout_proposals.py  generate_semantic_path_proposals.py  generate_summary_presentation.py  generate_target_poster_layout_proposals.py  openai_api_smoke.py  openai_batch_smoke.py  optimize_poster_layout.py  plot_poster_layout_day_comparison.py  plot_poster_layout_floorplan.py  plot_voyage_stage2_umap_3d.py  reference_split_regression_probe.py  run_analyze_matrix.py  run_build_atlas_package.py  run_build_book.py  run_embed_matrix.py  run_enrich_abstracts.py  run_fetch_abstracts.py  run_fetch_withdrawn.py  run_gmm_overlap_experiment.py  time_figure_enrichment.py  validate_compose_recipe_baseline.py  validate_ui_data.sh  write_topic_group_report.py
site/: data-channel.json  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
tests/: test_analyze_centroids.py  test_analyze_cli.py  test_analyze_communities.py  test_analyze_provenance.py  test_analyze_rollup.py  test_analyze_stage.py  (+98 more)
(+5236 files in other folders)
