[project]
name = "abstractatlas"
version = "0.2.0"
description = "Abstract Atlas: pluggable ingestion + atlas pipeline (OHBM 2026 abstracts, NeuroScape/PubMed, and future sources)"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
review = ["playwright>=1.58.0"]
parquet = ["pyarrow>=17.0.0"]
r2 = ["boto3>=1.34"]
enrich = ["openai>=2.0.0", "Pillow>=10.0", "pydantic>=2.0"]
embeddings = ["voyageai>=0.2", "sentence-transformers>=2.7", "torch>=2.2"]
analysis = [
    "umap-learn>=0.5",
    "faiss-cpu>=1.8",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "spacy>=3.8",
    "h5py>=3.10",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.4",
    "hdbscan>=0.8",
]
analysis-sci = ["scispacy>=0.5"]
ui = [
    "numpy>=1.26",
    "sentence-transformers>=2.7",
    "pyyaml>=6.0",
    "requests>=2.31",
]
ui-dev = ["playwright>=1.58.0"]
abstracts_book = [
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "pikepdf>=8",
    "Pillow>=10.0",
    "joblib>=1.3",
]

[project.scripts]
# Canonical CLI (spec 027: ohbmcli → aacli).
aacli = "abstractatlas.cli:main"
# Deprecated alias — warns then delegates to aacli. Kept one transition
# cycle; remove next release. (Spec 027 FR-003 / research R3.)
ohbmcli = "abstractatlas.cli:_ohbmcli_deprecated_main"
# The legacy per-stage `ohbm-*` console scripts were dropped in spec 027:
# most already pointed at modules moved in the Stage-5 reorg
# (ohbm2026.enrichment, ohbm2026.openalex). Their functions remain
# importable via `abstractatlas.*` and runnable as `aacli` subcommands.

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
